# celo-mcp

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: basic_usage.py
scripts/: release.py
src/celo_mcp/: server.py
src/celo_mcp/blockchain_data/: __init__.py  client.py  models.py  service.py
src/celo_mcp/config/: contracts.py  settings.py
src/celo_mcp/contracts/: __init__.py  service.py
src/celo_mcp/governance/: __init__.py  formatting.py  models.py  service.py
src/celo_mcp/nfts/: service.py
src/celo_mcp/staking/: __init__.py  models.py  service.py
src/celo_mcp/tokens/: models.py  service.py
src/celo_mcp/transactions/: service.py
src/celo_mcp/utils/: __init__.py  cache.py  formatting.py  logging.py  multicall.py  validators.py
tests/: conftest.py  test_validators.py
tests/integration/: test_governance_integration.py  test_mcp_tools.py
tests/unit/: test_blockchain_tools.py  test_contract_tools.py  test_governance_tools.py  test_nft_tools.py  test_token_tools.py  test_transaction_tools.py
