[project]
name = "celo-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for Celo blockchain data access and functionality"
readme = "README.md"
authors = [
    { name = "viral-sangani", email = "viral.sangani2011@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "web3>=7.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "asyncio-throttle>=1.0.0",
]
keywords = ["mcp", "celo", "blockchain", "web3", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/viral-sangani/celo-mcp"
Repository = "https://github.com/viral-sangani/celo-mcp"
Documentation = "https://github.com/viral-sangani/celo-mcp#readme"
Issues = "https://github.com/viral-sangani/celo-mcp/issues"

[project.scripts]
celo-mcp = "celo_mcp.server:main_sync"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
